Removed excess whitespace, duplicate information and fixed a class

--- a/iris/static/css/base.css
+++ b/iris/static/css/base.css
@@ -12,8 +12,12 @@ body {
 }
 
 main {
-    padding: 32px 0;
+    padding: 16px 0;
     min-width: 1024px;
+}
+
+.mdl-grid {
+    padding: 0;
 }
 
 .mdl-cell .mdl-card {
